# shelf-nitrate-response-to-upwelling

./: .pre-commit-config.yaml  README.md  pyproject.toml
data/NDBC_46050/: 46050_wind_binned.nc
data/ship/: NH_line_data.csv
data/ship/ea_ship_data/: Endurance-01_OC1404B_Discrete_Summary.csv  Endurance-02_OC1410A_Discrete_Summary.csv  Endurance-03_OC1503D-PS1506A_Discrete_Summary.csv  Endurance-04_TN330_OC1510A_Discrete_Summary.csv  Endurance-05_TN342_Discrete_Summary.csv  Endurance-06_AT37-03_Discrete_Summary.csv  Endurance-07_SKQ201704S_Discrete_Summary.csv  Endurance-08_SKQ201715S_Discrete_Summary.csv  Endurance-09_SKQ201808S_Discrete_Summary.csv  Endurance-10_SR1813_Discrete_Summary.csv  Endurance-14_SKQ202104S_Discrete_Summary.csv  Endurance-15_TN394_Discrete_Summary.csv
misc/mplstyles/: jgr_manuscript.mplstyle
notebooks/functions/: __init__.py  util.py
notebooks/python/: nitrate_analysis_manuscript.py
