[project]
name = "nitrate-upwelling"
version = "0.1.0"
readme = "README.md"
requires-python = ">3.11"
dependencies = [
    "cmocean>=4.0.3",
    "cycler>=0.12.1",
    "flox>=0.10.0",
    "gsw>=3.6.19",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "scipy>=1.15.2",
    "statsmodels>=0.14.4",
    "sympy>=1.13.3",
    "tqdm>=4.67.1",
    "xarray[accel,io,parallel]>=2025.1.2",
]
authors = [
    {name = "Andrew Scherer", email = "andrew@sourcedepth.com"}
]
license = "MIT"

[tool.uv]
exclude-newer = "2025-03-06"

[tool.ruff.lint.isort]
known-local-folder = ["functions"]